# cgltf-beef

./: .gitignore  CMakeLists.txt  README.md  cgltf_stub.c  prepare.ps1
cgltf-beef/: BeefProj.toml
cgltf-beef-test/: BeefProj.toml  BeefSpace.toml
cgltf-beef-test/src/: Program.bf
cgltf-beef/src/: CGLTF.bf  Enums.bf  Structs.bf
